--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,37 +1,16 @@
-<div class="login-card flex-row">
-  <h2>Login</h2>
-  <form class="form login-form">
-    <div class="form-group">
-      <label for="email-login">email:</label>
-      <input class="form-input" type="text" id="email-login" />
+  <div class="chef-image">
+  <main>
+    <div class="row ">
+      <div class="col l12 s12 margin-top-25pc">
+        <img href="#" class="brand-logo logo center-25pc" src="./links/Platters and Pantries.png">
+        <a class="waves-effect waves-light btn center-25pc">login</a>
+        <div class="center-25pc"    
+        <div class="input-field col l12 s12 ">
+              <input value="" id="first_name2" type="text" class="validate">
+              <label class="active" for="first_name2">User Name</label>
+              <input value="" id="first_name2" type="text" class="validate">
+              <label class="active" for="first_name2">Password</label>
+          </div>
+      </div>
+    </div>    
     </div>
-    <div class="form-group">
-      <label for="password-login">password:</label>
-      <input class="form-input" type="password" id="password-login" />
-    </div>
-    <div class="form-group">
-      <button class="btn btn-primary" type="submit">login</button>
-    </div>
-</div>
-</form>
-<div class="login-card flex-row">
-  <h2 class="page-title">Signup</h2>
-  <form class="form signup-form">
-    <div class="form-group">
-      <label for="username-signup">Username:</label>
-      <input class="form-input" type="text" id="username-signup" />
-    </div>
-    <div class="form-group">
-      <label for="email-signup">Email:</label>
-      <input class="form-input" type="text" id="email-signup" />
-    </div>
-    <div class="form-group">
-      <label for="password-signup">Password:</label>
-      <input class="form-input" type="password" id="password-signup" />
-    </div>
-    <div class="form-group">
-      <button class="btn btn-primary" type="submit">signup</button>
-    </div>
-  </form>
-</div>
-<script src="/js/login.js"></script>
