--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,16 +1,14 @@
-  <div class="chef-image">
-  <main>
-    <div class="row ">
-      <div class="col l12 s12 margin-top-25pc">
-        <img href="#" class="brand-logo logo center-25pc" src="./links/Platters and Pantries.png">
-        <div class="center-25pc"    
-        <div class="input-field col l12 s12 ">
-              <input value="" id="first_name2" type="text" class="validate">
-              <label class="active" for="first_name2">User Name</label>
-              <input value="" id="first_name2" type="text" class="validate">
-              <label class="active" for="first_name2">Password</label>
-          </div>
-         <a class="waves-effect waves-light btn">LOGIN</a>
+<div class="chef-image">
+  <div class="row ">
+    <div class="col l12 s12 margin-top-25pc">
+      <img href="#" class="brand-logo logo center-25pc" src="./links/Platters and Pantries.png">
+      <div class="center-25pc" <div class="input-field col l12 s12 ">
+        <input value="" id="first_name2" type="text" class="validate">
+        <label class="active" for="first_name2">User Name</label>
+        <input value="" id="first_name2" type="text" class="validate">
+        <label class="active" for="first_name2">Password</label>
       </div>
-    </div>    
+      <a class="waves-effect waves-light btn center-25pc">LOGIN</a>
     </div>
+  </div>
+</div>
