--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -48,37 +48,10 @@
 
           <h2 class="white-text std-padding-left ">Top Chicken Recipes</h2>
 
-          <div class="card-container flex-container  col s12 flow-text">
-            <div class="card">
-              <div class="card-image waves-effect waves-block waves-light">
-                <img class="activator" src="./links/chicken.jpg">
-              </div>
-              <div class="card-content">
-                <span class="card-title activator grey-text text-darken-4">Chicken Dish<i
-                    class="material-icons right">more_vert</i></span>
-                <p><a href="#">Ingredients</a></p>
-              </div>
-            </div>
-            <div class="card">
-              <div class="card-image waves-effect waves-block waves-light">
-                <img class="activator" src="./links/chicken.jpg">
-              </div>
-              <div class="card-content">
-                <span class="card-title activator grey-text text-darken-4">Chicken Dish<i
-                    class="material-icons right">more_vert</i></span>
-                <p><a href="#">Ingredients</a></p>
-              </div>
-            </div>
-            <div class="card">
-              <div class="card-image waves-effect waves-block waves-light">
-                <img class="activator" src="./links/chicken.jpg">
-              </div>
-              <div class="card-content">
-                <span class="card-title activator grey-text text-darken-4">Chicken Dish<i
-                    class="material-icons right">more_vert</i></span>
-                <p><a href="#">Ingredients</a></p>
-              </div>
-            </div>
+          <div class="card-container flex-container  col s12 flow-text">   
+              {{#each recipe as |recipesCard|}}
+              {{> recipesCard}}  
+              {{/each}}
           </div>
 
 
@@ -87,11 +60,12 @@
         
             <ul class="collection with-header list">
               <h2>Grocery List</h2>
+              
               <li class="collection-header"><h6 class="align">Add to <br> Pantry</h6></li>
-              <li class="collection-item"><div>Item<a href="#!" class="secondary-content"><i class="material-icons">add_circle</i></a></div></li>
-              <li class="collection-item"><div>Item<a href="#!" class="secondary-content"><i class="material-icons">add_circle</i></a></div></li>
-              <li class="collection-item"><div>Item<a href="#!" class="secondary-content"><i class="material-icons">add_circle</i></a></div></li>
-              <li class="collection-item"><div>Item<a href="#!" class="secondary-content"><i class="material-icons">add_circle</i></a></div></li>
+
+              {{#each shoppingList as |grocerylist|}}
+              {{> grocerylist}}  
+              {{/each}}
             </ul>
          <div>
           <a class="waves-effect waves-light btn center-100pc">VIEW MY PANTRY</a>
