--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -2,11 +2,11 @@
   <div class="row ">
     <div class="col l12 s12 margin-top-25pc">
       <img href="#" class="brand-logo logo center-25pc" src="./links/Platters and Pantries.png">
-      <div class="center-25pc" <div class="input-field col l12 s12 ">
+      <div  class="input-field col l12 center-25pc s12 ">
         <input value="" id="first_name2" type="text" class="validate">
-        <label class="active" for="first_name2">User Name</label>
+        <label class="active" for="first_name2">{{user.name}}</label>
         <input value="" id="first_name2" type="text" class="validate">
-        <label class="active" for="first_name2">Password</label>
+        <label class="active" for="first_name2">{{user.password}}</label>
       </div>
       <a class="waves-effect waves-light btn center-25pc">LOGIN</a>
     </div>
