--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -21,7 +21,31 @@
 </head>
 
 <body>
-  {{{ body }}}
+    <header>
+    <nav class="transparent">
+      <div class="nav-wrapper">
+        <img href="#" class="brand-logo logo" src="./links/Platters and Pantries.png">
+        <a href="#" data-target="mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+        <ul class="right hide-on-med-and-down">
+          <li class="waves-effect waves-light"><a href="/login">Login</a></li>
+          <li class="waves-effect waves-light"><a href="/home">Home</a></li>
+          <li class="waves-effect waves-light"><a href="/recipes">Recipes</a></li>
+          <li class="waves-effect waves-light"><a href="/about">About</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
+    <ul class="sidenav black white-text" id="mobile">
+      <li><a class="white-text" href="/login">Login</a></li>
+      <li><a class="white-text" href="/home">Home</a></li>
+      <li><a class="white-text" href="/recipes">Recipes</a></li>
+      <li><a class="white-text" href="/about">About</a></li>
+    </ul>
+
+  </header>
+
+{{{ body }}}
 </body>
 
 
