--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -27,54 +27,51 @@
         <h1 class="white-text">WHAT'S ON <br>THE MENU TODAY?</h1>
         <br>
 
-          <div>
-            <form autocomplete="off" >
-              <div class="input-field searchbar">
-                <input id="searchdish" class="autocomplete validate" required="" aria-required="true" type="text" placeholder="Search">
-                <a id="search-dish"class="waves-effect waves-light btn white-text">Search</a>
-                <span class="helper-text" data-error="Enter a Dish" data-success=""></span>
-                </input>
-              </div>
-              <div>
-                <a class="waves-effect waves-light btn">BURGERS</a>
-                <a class="waves-effect waves-light btn">SALAD</a>
-                <a class="waves-effect waves-light btn">PIZZA</a>
-                <a class="waves-effect waves-light btn">SUSHI</a>
-                <a class="waves-effect waves-light btn">VEGAN</a>
-              </div>
-            </form>
-          </div>
+        <div>
+          <form autocomplete="off">
+            <div class="input-field searchbar">
+              <input id="searchdish" class="autocomplete validate" required="" aria-required="true" type="text"
+                placeholder="Search">
+              <a id="search-dish" class="waves-effect waves-light btn white-text">Search</a>
+              <span class="helper-text" data-error="Enter a Dish" data-success=""></span>
+              </input>
+            </div>
+            <div>
+              <a class="waves-effect waves-light btn">BURGERS</a>
+              <a class="waves-effect waves-light btn">SALAD</a>
+              <a class="waves-effect waves-light btn">PIZZA</a>
+              <a class="waves-effect waves-light btn">SUSHI</a>
+              <a class="waves-effect waves-light btn">VEGAN</a>
+            </div>
+          </form>
+        </div>
 
 
-          <h2 class="white-text std-padding-left ">Top Chicken Recipes</h2>
-
-          <div class="card-container flex-container  col s12 flow-text">   
-              {{#each recipe as |recipesCard|}}
-              {{> recipesCard}}  
-              {{/each}}
-          </div>
-
-        <h2 class="white-text std-padding-left ">Top Chicken Recipes</h2>
+        <h2 class="white-text std-padding-left ">Top {{dish}} Recipes</h2>
 
         <div class="card-container flex-container  col s12 flow-text">
-          {{#each recipes}}
-            <div>{{recipe.label }}</div>
+          {{#each recipes as |recipesCard|}}
+          {{> recipesCard}}
           {{/each}}
         </div>
-        <div class="col l3 s12 flow-text ">
-        
-            <ul class="collection with-header list">
-              <h2>Grocery List</h2>
-              
-              <li class="collection-header"><h6 class="align">Add to <br> Pantry</h6></li>
 
-              {{#each shoppingList as |grocerylist|}}
-              {{> grocerylist}}  
-              {{/each}}
-            </ul>
-         <div>
-          <a class="waves-effect waves-light btn center-100pc">VIEW MY PANTRY</a>
+
+        <div class="col l3 s12 flow-text ">
+
+          <ul class="collection with-header list">
+            <h2>Grocery List</h2>
+
+            <li class="collection-header">
+              <h6 class="align">Add to <br> Pantry</h6>
+            </li>
+
+            {{#each shoppingList as |grocerylist|}}
+            {{> grocerylist}}
+            {{/each}}
+          </ul>
+          <div>
+            <a class="waves-effect waves-light btn center-100pc">VIEW MY PANTRY</a>
+          </div>
         </div>
       </div>
-    </div>
   </main>
