--- a/views/partials/recipesCard.handlebars
+++ b/views/partials/recipesCard.handlebars
@@ -1,9 +1,9 @@
 <div class="card">
   <div class="card-image waves-effect waves-block waves-light">
-    <img class="activator" src="{{image}}./links/chicken.jpg" />
+    <img class="activator" src={{recipe.image}} />
   </div>
   <div class="card-content">
-    <span class="card-title activator grey-text text-darken-4">Chicken Dish<i
+    <span class="card-title activator grey-text text-darken-4">{{recipe.label}}<i
         class="material-icons right">more_vert</i></span>
     <p><a href="#">Ingredients</a></p>
   </div>
