--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-    <header>
+    {{!-- <header>
     <nav class="transparent">
       <div class="nav-wrapper">
         <img href="#" class="brand-logo logo" src="./links/Platters and Pantries.png">
@@ -43,7 +43,7 @@
       <li><a class="white-text" href="/about">About</a></li>
     </ul>
 
-  </header>
+  </header> --}}
 
 {{{ body }}}
 </body>
