--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -7,8 +7,6 @@
           <div class="input-field col l12 s12 ">
             <input value="" id="login-email" type="text" class="validate">
             <label class="active" for="login-email">Email</label>
-            {{!-- <input value="" id="login-password" type="password" class="validate">
-            <label class="active" for="login-password">Password</label> --}}
           </div>
           <div class="input-field col l12 s12 ">
             <input value="" id="login-password" type="password" class="validate">
@@ -18,6 +16,26 @@
       </div>
       <a class="waves-effect waves-light btn center-25pc">LOGIN</a>
     </div>
+    <div class="row ">
+      <div class="col l12 s12 ">
+        <div class="center-25pc">
+          <div class="input-field col l12 s12 ">
+            <input value="" id="signup-name" type="text" class="validate">
+            <label class="active" for="signup-name">Name</label>
+          </div>
+          <div class="input-field col l12 s12 ">
+            <input value="" id="signup-email" type="text" class="validate">
+            <label class="active" for="signup-email">Email</label>
+          </div>
+          <div class="input-field col l12 s12 ">
+            <input value="" id="signup-password" type="password" class="validate">
+            <label class="active" for="signup-password">Password</label>
+          </div>
+        </div>
+      </div>
+      <a class="waves-effect waves-light btn center-25pc signupBtn">SIGN UP</a>
+    </div>
   </main>
 </div>
+
 <script src="./js/login.js"></script>
