--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -39,11 +39,11 @@
               </input>
             </div>
             <div>
-              <a class="waves-effect waves-light btn">BURGERS</a>
-              <a class="waves-effect waves-light btn">SALAD</a>
-              <a class="waves-effect waves-light btn">PIZZA</a>
-              <a class="waves-effect waves-light btn">SUSHI</a>
-              <a class="waves-effect waves-light btn">VEGAN</a>
+              <a id="Burgers" class="waves-effect waves-light btn oneSearch">BURGERS</a>
+              <a id="Salad" class="waves-effect waves-light btn oneSearch">SALAD</a>
+              <a id="Pizza" class="waves-effect waves-light btn  oneSearch">PIZZA</a>
+              <a id="Sushi" class="waves-effect waves-light btn oneSearch">SUSHI</a>
+              <a id="Vegan" class="waves-effect waves-light btn oneSearch">VEGAN</a>
             </div>
           </form>
         </div>
