--- a/views/partials/pantry.handlebars
+++ b/views/partials/pantry.handlebars
@@ -1,5 +1,11 @@
- <li class="collection-item">
-     <div>{{Item}}<a href="#!" class="secondary-content">
-     <i class="material-icons">add_circle</i></a>
-     </div>
-</li>
+<ul class="collection with-header list">
+  <h2>Pantry List</h2>
+  <li class="collection-item">
+    <div>{{Item}}<a href="#!" class="secondary-content">
+        <i class="material-icons">add_circle</i></a>
+    </div>
+  </li>
+</ul>
+<div>
+  <button onclick="toggle()" class="waves-effect waves-light btn center-100pc">VIEW GROCERY LIST</button>
+</div>
