fixed display of ingredients

--- a/views/partials/shoppingListItem.handlebars
+++ b/views/partials/shoppingListItem.handlebars
@@ -1,3 +1,5 @@
-<div>{{name}}<a href="#!" class="secondary-content">
-    <i class="material-icons">add_circle</i></a>
-</div>
+<li class="collection-item">
+  <div>{{name}}<a href="#!" class="secondary-content">
+      <i class="material-icons">add_circle</i></a>
+  </div>
+</li>
