adding logout option to dish page

--- a/views/dish.handlebars
+++ b/views/dish.handlebars
@@ -9,6 +9,7 @@
             <li class="waves-effect waves-light"><a href="/login">Login</a></li>
             <li class="waves-effect waves-light"><a href="/">Home</a></li>
             <li class="waves-effect waves-light"><a href="/recipes">Recipes</a></li>
+            <li><a class="white-text logoutBtn">Logout</a></li>
             <li class="waves-effect waves-light"><a href="/about">About</a>
             </li>
           </ul>
@@ -19,6 +20,7 @@
         <li><a class="white-text" href="/login">Login</a></li>
         <li><a class="white-text" href="/">Home</a></li>
         <li><a class="white-text" href="/recipes">Recipes</a></li>
+        <li><a class="white-text logoutBtn">Logout</a></li>
         <li><a class="white-text" href="/about">About</a></li>
       </ul>
 
@@ -48,3 +50,4 @@
   </main>
 </div>
 <script src="/js/dish.js"></script>
+<script src="/js/logout.js"></script>
