updates to handlebars and adding new pages

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,13 +1,15 @@
 <div class="chef-image">
-  <header>
-    <nav class="transparent">
+    <header>
+        <nav class="transparent">
       <div class="nav-wrapper">
         <img href="#" class="brand-logo logo" src="./links/Platters and Pantries.png">
         <a href="#" data-target="mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         <ul class="right hide-on-med-and-down">
           <li class="waves-effect waves-light"><a href="/login">Login</a></li>
-          <li class="waves-effect waves-light"><a href="/">Home</a></li>
+          <li class="waves-effect waves-light"><a href="/home">Home</a></li>
           <li class="waves-effect waves-light"><a href="/recipes">Recipes</a></li>
+        <li><a class="white-text" href="/pantry">My Pantry</a></li>
+         <li><a class="white-text" href="/groceryList">Grocery List</a></li>
           <li class="waves-effect waves-light"><a href="/about">About</a>
           </li>
         </ul>
@@ -16,12 +18,14 @@
 
     <ul class="sidenav black white-text" id="mobile">
       <li><a class="white-text" href="/login">Login</a></li>
-      <li><a class="white-text" href="/">Home</a></li>
+      <li><a class="white-text" href="/home">Home</a></li>
       <li><a class="white-text" href="/recipes">Recipes</a></li>
+      <li><a class="white-text" href="/pantry">My Pantry</a></li>
+      <li><a class="white-text" href="/groceryList">Grocery List</a></li>
       <li><a class="white-text" href="/about">About</a></li>
     </ul>
 
-  </header>
+    </header>
   <main>
     <div class="row">
       <div class="col l9 s12">
@@ -50,14 +54,14 @@
 
 
         <h2 class="white-text std-padding-left ">Top {{dish}} Recipes</h2>
-
-        <div id="first_div" class="card-container flex-container  col s12 flow-text">
+      <div class="card-container flex-container col s12 flow-text ">
+        {{!-- <div id="first_div" class="card-container flex-container  col s12 flow-text"> --}}
           {{#each recipes as |recipesCard|}}
           {{> recipesCard}}
           {{/each}}
         </div>
 
-
+{{!-- 
         <div id="second_div" class="col l3 s12">
             {{#each shoppingList as |grocerylist|}}
             {{> grocerylist}}
@@ -66,7 +70,7 @@
        {{#each shoppingList as |pantrylist|}}
             {{> pantrylist}}
             {{/each}}
-        </div>
+        </div> --}}
       </div>
   </main>
   <script src="/js/recipeLookup.js"></script>
