--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21,7 +21,8 @@ h4 {
   font-size: 1em;
 }
 h5 {
-  font-weight: 400;
+  font-size: .7em;
+  font-weight: 100;
 }
 h6 {
   font-weight: 200;
@@ -96,6 +97,24 @@ main {
   position: relative;
 
 }
+.grocery-image {
+  background-image: url("../links/grocery.png");
+  height: 900px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+
+}
+.pantry-image {
+  background-image: url("../links/pantry.png");
+  height: 900px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+
+}
 .dish-image {
   background-image: url("../links/steak.jpg");
   min-height: 800px;
@@ -137,7 +156,14 @@ main {
   margin-right: auto;
   width: 50%;
 }
-
+@media only screen and (max-width: 600px) {
+.center-50pc-MB {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+}
 .center-100pc {
   display: block;
   margin-left: auto;
@@ -190,7 +216,6 @@ main {
   color: rgb(215, 215, 215);
 }
 .collection.with-header .collection-header {
-    
   border-bottom: none;
   background-color: rgba(0, 0, 0, 0.6);
 }
@@ -208,9 +233,9 @@ main {
   height: 800px;
 }
 
-.list{
+/* .list{
   margin-top: 200px;
-}
+} */
 
 .valign-wrapper {
 	display: -webkit-flex;
@@ -223,4 +248,18 @@ main {
 
 #displayNone{
   display: none;
+}
+
+@media (max-width: 768px) {
+  .flex-s {
+    display: flex;
+    flex-direction: column; /* Stack on top */
+  }
+  .box-a {
+    padding-top: 0px;
+    order: 2; /* Go down, bring Box B up */
+  }
+  .box-a {
+    order: 1; /* Go down, bring Box B up */
+  }
 }
