shoppingList handlerbars page populates needed ingredients
Co-authored-by: anaeem23 <anaeem23@users.noreply.github.com>

--- a/views/partials/shoppingListItem.handlebars
+++ b/views/partials/shoppingListItem.handlebars
@@ -1,5 +1,11 @@
-<li class="collection-item">
+{{!-- <li class="collection-item">
   <div>{{name}}<a href="#!" class="secondary-content">
       <i class="material-icons">add_circle</i></a>
   </div>
+</li> --}}
+<li class="collection-item">
+  <div>{{name}}</div>
+  <div>{{quantity}}</div>
+  <div>{{measure}}</div> <a href="#!" class="secondary-content"><i class="material-icons">add_circle</i><i
+      class="material-icons">delete</i></a>
 </li>
