panty and shopping list v3

--- a/views/shoppingpage.handlebars
+++ b/views/shoppingpage.handlebars
@@ -64,7 +64,7 @@
               <div>{{this.name}}</div>
               <div>{{this.quantity}}</div>
               <div>{{this.measure}}</div> <a href="#!" class="secondary-content"><i
-                  class="material-icons">add_circle</i><i class="material-icons delete" data-amount={{this.quantity}} data-id = {{this.ingredient_id}} id="delete">delete</i></a>
+                  class="material-icons" data-amount={{this.quantity}} data-id = {{this.ingredient_id}} id="add">add_circle</i><i class="material-icons" data-amount={{this.quantity}} data-id = {{this.ingredient_id}} id="delete">delete</i></a>
             </li>
             {{/each}}
         </div>
