tables filter on user id, fixed home link, add directly to pantry

--- a/views/dish.handlebars
+++ b/views/dish.handlebars
@@ -8,7 +8,7 @@
         <ul class="right hide-on-med-and-down">
           <li class="waves-effect waves-light"><a href="/login">Login</a></li>
            <li><a class="white-text logoutBtn">Logout</a></li>
-          <li class="waves-effect waves-light"><a href="/home">Home</a></li>
+          <li class="waves-effect waves-light"><a href="/">Home</a></li>
           <li class="waves-effect waves-light"><a href="/recipes">Recipes</a></li>
         <li><a class="white-text" href="/pantry">My Pantry</a></li>
          <li><a class="white-text" href="/groceryList">Grocery List</a></li>
@@ -21,7 +21,7 @@
     <ul class="sidenav black white-text" id="mobile">
       <li><a class="white-text" href="/login">Login</a></li>
        <li><a class="white-text logoutBtn">Logout</a></li>
-      <li><a class="white-text" href="/home">Home</a></li>
+      <li><a class="white-text" href="/">Home</a></li>
       <li><a class="white-text" href="/recipes">Recipes</a></li>
       <li><a class="white-text" href="/pantry">My Pantry</a></li>
       <li><a class="white-text" href="/groceryList">Grocery List</a></li>
