--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,16 +1,16 @@
 <div class="chef-image">
-    <header>
-        <nav class="transparent">
+  <header>
+    <nav class="transparent">
       <div class="nav-wrapper">
         <img href="#" class="brand-logo logo" src="./links/Platters and Pantries.png">
         <a href="#" data-target="mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         <ul class="right hide-on-med-and-down">
           <li class="waves-effect waves-light"><a href="/login">Login</a></li>
-            <li><a class="white-text logoutBtn">Logout</a></li>
-          <li class="waves-effect waves-light"><a href="/home">Home</a></li>
+          <li><a class="white-text logoutBtn">Logout</a></li>
+          <li class="waves-effect waves-light"><a href="/">Home</a></li>
           <li class="waves-effect waves-light"><a href="/recipes">Recipes</a></li>
-        <li><a class="white-text" href="/pantry">My Pantry</a></li>
-         <li><a class="white-text" href="/groceryList">Grocery List</a></li>
+          <li><a class="white-text" href="/pantry">My Pantry</a></li>
+          <li><a class="white-text" href="/groceryList">Grocery List</a></li>
           <li class="waves-effect waves-light"><a href="/about">About</a>
           </li>
         </ul>
@@ -19,16 +19,16 @@
 
     <ul class="sidenav black white-text" id="mobile">
       <li><a class="white-text" href="/login">Login</a></li>
-        <li><a class="white-text logoutBtn">Logout</a></li>
-      <li><a class="white-text" href="/home">Home</a></li>
+      <li><a class="white-text logoutBtn">Logout</a></li>
+      <li><a class="white-text" href="/">Home</a></li>
       <li><a class="white-text" href="/recipes">Recipes</a></li>
       <li><a class="white-text" href="/pantry">My Pantry</a></li>
       <li><a class="white-text" href="/groceryList">Grocery List</a></li>
       <li><a class="white-text" href="/about">About</a></li>
     </ul>
 
-    </header>
-      {{#if logged_in}}
+  </header>
+  {{#if logged_in}}
   <main>
     <div class="row">
       <div class="col l9 s12">
@@ -56,25 +56,25 @@
 
 
         <h2 class="white-text std-padding-left ">Top {{dish}} Recipes</h2>
-      <div class="card-container flex-container col s12 flow-text ">
-        {{!-- <div id="first_div" class="card-container flex-container  col s12 flow-text"> --}}
-          {{#each recipes as |recipesCard|}}
-          {{> recipesCard}}
-          {{/each}}
-        </div>
-        <h2>Shopping List</h2>
+        <div class="card-container flex-container col s12 flow-text ">
+          {{!-- <div id="first_div" class="card-container flex-container  col s12 flow-text"> --}}
+            {{#each recipes as |recipesCard|}}
+            {{> recipesCard}}
+            {{/each}}
+          </div>
+          <h2><a class="white-text" href="/groceryList">Shopping List</a></h2>
 
-{{!-- 
-        <div id="second_div" class="col l3 s12">
+          {{!--
+          <div id="second_div" class="col l3 s12">
             {{#each shoppingList as |grocerylist|}}
             {{> grocerylist}}
             {{/each}}
 
-       {{#each shoppingList as |pantrylist|}}
+            {{#each shoppingList as |pantrylist|}}
             {{> pantrylist}}
             {{/each}}
-        </div> --}}
-      </div>
+          </div> --}}
+        </div>
   </main>
   {{/if}}
   {{#unless logged_in}}
