--- a/views/pantrypage.handlebars
+++ b/views/pantrypage.handlebars
@@ -6,7 +6,8 @@
         <a href="#" data-target="mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         <ul class="right hide-on-med-and-down">
           <li class="waves-effect waves-light"><a href="/login">Login</a></li>
-          <li class="waves-effect waves-light"><a href="/home">Home</a></li>
+          <li><a class="white-text logoutBtn">Logout</a></li>
+          <li class="waves-effect waves-light"><a href="/">Home</a></li>
           <li class="waves-effect waves-light"><a href="/recipes">Recipes</a></li>
           <li><a class="white-text" href="/pantry">My Pantry</a></li>
           <li><a class="white-text" href="/groceryList">Grocery List</a></li>
@@ -18,7 +19,8 @@
 
     <ul class="sidenav black white-text" id="mobile">
       <li><a class="white-text" href="/login">Login</a></li>
-      <li><a class="white-text" href="/home">Home</a></li>
+      <li><a class="white-text logoutBtn">Logout</a></li>
+      <li><a class="white-text" href="/">Home</a></li>
       <li><a class="white-text" href="/recipes">Recipes</a></li>
       <li><a class="white-text" href="/pantry">My Pantry</a></li>
       <li><a class="white-text" href="/groceryList">Grocery List</a></li>
@@ -31,8 +33,8 @@
       <form class="col s12">
         <div class="row">
           <div class="input-field col s6">
-            <input id="Add New Item" type="text" class="validate">
-            <label for="Add New Item">Add New Item</label>
+            <input id="AddNewItem" type="text" class="validate">
+            <label for="AddNewItem">Add New Item</label>
           </div>
           <div class="input-field col s6">
             <input id="Quantity" type="text" class="validate">
@@ -43,7 +45,7 @@
             <label for="Measurements">Measurements</label>
           </div>
           <div>
-            <button class="waves-effect waves-light btn center-50pc-MB">ADD ITEM</button>
+            <button class="waves-effect waves-light btn center-50pc-MB addItmBtn">ADD ITEM</button>
             <button class="waves-effect waves-light btn center-50pc-MB">CANCEL</button>
           </div>
         </div>
@@ -53,9 +55,9 @@
       <div class="col l12 s12 flow-text ">
         <div>
           <ul class="collection with-header list">
-            <h2>Grocery List</h2>
+            <h2>Pantry List</h2>
             <li class="collection-header">
-              <h4>Grocery Items</h4>
+              <h4>Pantry Items</h4>
               <h6 class="align">Add to <br> Pantry</h6>
             </li>
 
@@ -64,7 +66,8 @@
               <div>{{this.name}}</div>
               <div>{{this.quantity}}</div>
               <div>{{this.measure}}</div> <a href="#!" class="secondary-content"><i
-                  class="material-icons">add_circle</i><i class="material-icons delete" data-amount={{this.quantity}} data-id = {{this.ingredient_id}} id="delete">delete</i></a>
+                  class="material-icons">add_circle</i><i class="material-icons delete" data-amount={{this.quantity}}
+                  data-id={{this.ingredient_id}} id="delete">delete</i></a>
             </li>
             {{/each}}
         </div>
@@ -74,3 +77,6 @@
         </div>
       </div>
   </main>
+</div>
+<script src="/js/logout.js"></script>
+<script src="/js/addIngredientPantry.js"></script>
